Fix submit alignment

--- a/assignment11/forms-assign11/css/form.css
+++ b/assignment11/forms-assign11/css/form.css
@@ -115,6 +115,6 @@ legend {
 }
 
 #multchoice p {
-    width: 79%;
+    width: 82%;
     text-align: center;
 }
